--- a/.github/workflows/unit_tests.yml
+++ b/.github/workflows/unit_tests.yml
@@ -21,7 +21,7 @@ concurrency:
 
 jobs:
   build_and_test:
-    runs-on: intel-ubuntu-latest
+    runs-on: [self-hosted, linux]
     strategy:
       fail-fast: false
       matrix:
@@ -112,7 +112,7 @@ jobs:
         run: ctest -j $(nproc) -C ${{matrix.build_type}}
 
   quality_checks_pass:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, linux]
     steps:
       - uses: actions/checkout@v4
 
@@ -136,7 +136,7 @@ jobs:
         run: cmake --build ${{github.workspace}}/build -t quality
 
   sanitize:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, linux]
     strategy:
       fail-fast: false
       matrix:
@@ -161,7 +161,7 @@ jobs:
         run: cmake --build ${{github.workspace}}/build -t unit_tests
 
   valgrind:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, linux]
     steps:
       - uses: actions/checkout@v4
 
@@ -211,7 +211,7 @@ jobs:
           test $FAILSIZE = "0"
 
   merge_ok:
-    runs-on: ubuntu-22.04
+    runs-on: [self-hosted, linux]
     needs: [build_and_test, quality_checks_pass, sanitize, valgrind]
     steps:
       - name: Enable merge
