--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,9 +8,11 @@ project(
 
 include(cmake/get_cpm.cmake)
 cpmaddpackage("gh:intel/cicd-repo-infrastructure#main")
-cpmaddpackage("gh:intel/cpp-baremetal-senders-and-receivers#31d8b34")
-cpmaddpackage("gh:intel/cpp-std-extensions#509f259")
-cpmaddpackage("gh:intel/safe-arithmetic#e98fa06")
+
+add_versioned_package("gh:boostorg/mp11#boost-1.83.0")
+add_versioned_package("gh:intel/cpp-std-extensions#af0dfb2")
+add_versioned_package("gh:intel/cpp-baremetal-senders-and-receivers#eb4239f")
+add_versioned_package("gh:intel/safe-arithmetic#9ea549a")
 
 if(NOT DEFINED CMAKE_CXX_STANDARD)
     set(CMAKE_CXX_STANDARD 20)
@@ -19,8 +21,8 @@ endif()
 add_library(groov INTERFACE)
 target_include_directories(groov INTERFACE include)
 target_compile_features(groov INTERFACE cxx_std_${CMAKE_CXX_STANDARD})
-target_link_libraries_system(groov INTERFACE safe_arithmetic concurrency stdx
-                             async)
+target_link_libraries_system(groov INTERFACE async boost_mp11 safe_arithmetic
+                             stdx)
 
 if(PROJECT_IS_TOP_LEVEL)
     add_docs(docs)
