--- a/test/fail/CMakeLists.txt
+++ b/test/fail/CMakeLists.txt
@@ -4,4 +4,11 @@ function(add_fail_tests)
     endforeach()
 endfunction()
 
-add_fail_tests(identifier_path_invalid identifier_path_too_long)
+add_fail_tests(
+    identifier_path_invalid
+    identifier_path_too_long
+    read_ambiguous_path
+    read_ambiguous_multireg_path
+    read_invalid_path
+    read_invalid_multifield_path
+    read_invalid_multireg_path)
