:truck: Rename `identifier.hpp` to `path.hpp`

--- a/test/fail/CMakeLists.txt
+++ b/test/fail/CMakeLists.txt
@@ -5,8 +5,8 @@ function(add_fail_tests)
 endfunction()
 
 add_fail_tests(
-    identifier_path_invalid
-    identifier_path_too_long
+    path_invalid
+    path_too_long
     read_ambiguous_path
     read_ambiguous_multireg_path
     read_invalid_path
