:art: Simplify path handling
Do the right thing by paths with values: work in value space for functions like
`operator/` and `without_root`. Only one specialization of `with_values_t` is required.

--- a/test/fail/CMakeLists.txt
+++ b/test/fail/CMakeLists.txt
@@ -8,6 +8,7 @@ add_fail_tests(
     group_duplicate_path
     group_redundant_path
     group_unresolvable_path
+    path_ambiguous
     path_mismatch
     path_too_long
     read_ambiguous_path
