:sparkles: Add basic write support
- Separate `path` and `value_path`
- Rename "objects" to config
- Introduce `read_spec` and `write_spec` as inputs to `read`/`write`
- `read_result` is replaced; unified with `write_spec`

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -13,5 +13,12 @@ function(add_tests)
     endforeach()
 endfunction()
 
-add_tests(group object path read)
+add_tests(
+    config
+    path
+    read
+    read_spec
+    value_path
+    write
+    write_spec)
 add_subdirectory(fail)
