--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,7 +7,11 @@ project(
     DESCRIPTION "A generic register operation optimizer.")
 
 include(cmake/get_cpm.cmake)
-cpmaddpackage("gh:intel/cicd-repo-infrastructure#main")
+if(PROJECT_IS_TOP_LEVEL)
+    cpmaddpackage("gh:intel/cicd-repo-infrastructure#dev")
+else()
+    cpmaddpackage("gh:intel/cicd-repo-infrastructure#3e2bef0")
+endif()
 
 add_versioned_package("gh:boostorg/mp11#boost-1.83.0")
 add_versioned_package("gh:intel/cpp-std-extensions#f67b432")
