:art: Remove `[[nodiscard]]` for non-blocking `sync_write`
Problem:
- Most of the time when we call `sync_write`, it can't fail, and it returns a
  `optional<tuple<>>`. It's annoying to handle this because of `[[nodiscard]]`.

Solution:
- Remove `[[nodiscard]]` attribute on `sync_write`.
- When forcing a `sync_write` that blocks, return a `[[nodiscard]]` type that
  wraps the `optional<tuple<...>>`.

--- a/test/fail/CMakeLists.txt
+++ b/test/fail/CMakeLists.txt
@@ -16,6 +16,7 @@ add_fail_tests(
     read_only_field_without_identity
     sync_read_nontrivial
     sync_write_nontrivial
+    sync_write_nontrivial_nodiscard
     write_spec_literal_index)
 
 function(add_formatted_error_tests)
