:art: Adjust write-only semantics
Problem:
- "Indirect" read of a write-only field is generally fine, but some situations
  are errors.

Solution:
- Remove the prohibition on indirectly reading unused bits in a write-only
  register.

--- a/test/fail/read/CMakeLists.txt
+++ b/test/fail/read/CMakeLists.txt
@@ -10,7 +10,5 @@ if(${CMAKE_CXX_COMPILER_ID} STREQUAL "GNU" AND ${CMAKE_CXX_COMPILER_VERSION}
     return()
 endif()
 
-add_fail_tests(
-    read_from_wo_bits_indirect read_from_wo_field_indirect_by_field
-    read_from_wo_field_indirect_by_register read_from_wo_field_direct
-    read_from_wo_register_direct)
+add_fail_tests(read_from_wo_field_indirect_by_register
+               read_from_wo_field_direct read_from_wo_register_direct)
